--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">See More</a>
+        <a href="https://github.com/anshika-1102" class="btn">See More</a>
     </div>
 </div>
 
