--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <h2>Data Visualization</h2>
                 <p>I specialize in creating insightful visual representations of data to 
                     facilitate understanding and decision-making processes.</p>
-                <a href="#">Learn More</a>
+                <a href="https://github.com/anshika-1102/Spotify_EDA">Learn More</a>
             </div>
         </div>
     </div>
@@ -128,10 +128,10 @@
             <div class="work">
                 <img src="images/work1.jpg">
                 <div class="layer">
-                    <h3>Apache Log File Analysis</h3>
-                    <p>Parsed Apache log files to extract IP addresses, timestamps, platform, URLs, 
-                        and response codes, ensuring comprehensive data understanding. </p>
-                    <a href="https://github.com/anshika-1102/Apache_log_file_analysis"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Spotify EDA</h3>
+                    <p>Utilized Python, Pandas, Seaborn, and Matplotlib for Spotify Exploratory Data Analysis, 
+                        visualizing artists, duration, year, loudness, and other parameters from the dataset.</p>
+                    <a href="https://github.com/anshika-1102/Spotify_EDA"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -171,7 +171,7 @@
                     <a href="https://x.com/anshikarewliya?t=LpJLB92tj7-9PisK6Uv-3w&s=09"><i class="fa-brands fa-square-twitter"></i></a>
                     <a href="https://discord.com/invite/7GpBNuyK"><i class="fa-brands fa-discord"></i></a>
                 </div>
-                <a href="images/Anshika Rewliya (Resume).pdf" download class="btn btn2">Download CV</a>
+                <a href="images/Anshika Rewliya - Resume.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
