--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset=""UTF-8">
-    <meta http-equipv=""X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta http-equipv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content=""width=device-width, initial-scale="1.0">
     <title>Anshizz Portfolio</title>
     <link rel="stylesheet" href="styles.css">
@@ -99,7 +99,7 @@
                 <p>I specialize in building visually appealing and responsive front-end interfaces 
                     using HTML, CSS, and JavaScript to enhance user experience.
                 </p>
-                <a href="#">Learn More</a>
+                <a href="https://github.com/anshika-1102/HarmonyHub">Learn More</a>
             </div>
             <div>
                 <i class="fa-solid fa-crop-simple"></i>
@@ -137,6 +137,15 @@
             <div class="work">
                 <img src="images/work2.jpg">
                 <div class="layer">
+                    <h3>HarmonyHub</h3>
+                    <p> Developed HarmonyHub, a comprehensive mental health platform using the OpenText API, featuring
+                        community support and extensive mental health resources.</p>
+                    <a href="https://github.com/anshika-1102/HarmonyHub"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/work-2.png">
+                <div class="layer">
                     <h3>Manoday</h3>
                     <p>Created user flow and software diagrams for Manoday mental health app and 
                         designed UI-UX for accessibility and intuitive interaction.</p>
@@ -145,6 +154,15 @@
             </div>
             <div class="work">
                 <img src="images/work3.jpeg">
+                <div class="layer">
+                    <h3>ZamZam Restaurant Website</h3>
+                    <p>Developed restaurant website with a responsive and intuitive interface, enhancing user experience while browsing
+                        the menu.</p>
+                    <a href="https://github.com/anshika-1102/ZamZamRestaurant"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/work-3.png">
                 <div class="layer">
                     <h3>EthicalWebGuard</h3>
                     <p>Implemented BERT-based models in Python/Flask to detect dark patterns
